--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 :root {
     --bg-color: #150E28;
     --white: #FFF;
+    --steel-pink: #d434fe;
     --primary-color: linear-gradient(
         270deg,
         #903aff 0%,
-         #d434fe 56.42%,
+         var(--steel-pink) 56.42%,
         #ff26b9 99.99%,
         #fe34b9 100%
       );
@@ -30,6 +31,8 @@
 
 *, *::before, *::after {
     box-sizing: border-box;
+    overscroll-behavior: none;
+    
 }
 
 * {
@@ -44,8 +47,9 @@ html {
     color: var(--white);
 }
 
-.linked {
-    color: #D434FE;
+body {
+    border: 1px solid orange;
+    position: relative;
 }
 
 .navbar{
@@ -69,16 +73,19 @@ html {
     font-family: 'Clash Display';
 }
 
-/*.nav-right {
-    display: flex;
-    max-width: 80rem;
-}*/
+.pink {
+    color: var(--steel-pink);
+}
 
 a {
     text-decoration: none;
     color: var(--white);
 
 }
+
+/*img {
+
+}*/
 
 .nav-links-container {
     display: flex;
@@ -184,6 +191,74 @@ a {
     margin-top: 20px;
 }
 
+.container {
+    border: 1px solid red;
+    width: 100%;
+    max-width: 1200px;
+    height: 100vh;
+    padding: 0 126px;
+    margin: 0 auto;
+    
+}
+
+.header {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /*position: relative;*/
+}*/
+
+.top-text-and-stroke {
+    text-align: right;
+    /*position: absolute;
+    right: 0px;*/
+}
+
+.gray-star {
+    width: 26px;
+    height: 32px;   
+}
+
+.images {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+   background-image: url(./assets/images/man-wearing-smart-glasses-touching-virtual-screen\ 2.png);
+   background-size: contain; 
+   background-repeat: no-repeat;
+   background-position: bottom;
+   border: 1px solid green;
+}
+
+#bubbles{
+    width: 667px;
+    height: 641px;
+    position: relative;
+    bottom: 0;
+    border: 1px solid green;
+}
+
+/*#smart-glasses {
+    width: 828px;
+    height: 715px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border: 1px solid green;
+    background-blend-mode: luminosity;
+}*/
+
+section div {
+    border: 1px solid gold;
+    
+}
+
+.top-text {
+    font-size: 3.6rem;
+}
+
 @media screen and (max-width: 700px) {
     html {
         font-size: 6px;
@@ -227,7 +302,7 @@ a {
     }
 
     .close-btn {
-        border: 1px solid #903AFF;
+        border: 1px solid #903AFF; 
         padding: 5px 6px;
         border-radius: 50%;
         align-items: center;
