--- a/styles.css
+++ b/styles.css
@@ -228,14 +228,17 @@ a {
    background-size: contain; 
    background-repeat: no-repeat;
    background-position: bottom;
+   background-blend-mode: luminosity;
+   background-color: rgba(var(--bg-color) 0.04);
    border: 1px solid green;
+   
 }
 
 #bubbles{
     width: 667px;
     height: 641px;
-    position: relative;
-    bottom: 0;
+    margin-top: 190px;
+    margin-right: 40px;
     border: 1px solid green;
 }
 
